<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddItem">

    <EditText
        android:id="@+id/updateName"
        android:layout_width="340dp"
        android:layout_height="42dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/add_name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:lineSpacingExtra="10sp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/updateImage"
        android:layout_width="340dp"
        android:layout_height="168dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/image_for_item"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.546"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateName"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />

    <ImageButton
        android:id="@+id/cameraButton"
        android:layout_width="153dp"
        android:layout_height="54dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="#5C5858"
        android:contentDescription="@string/add_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.155"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateImage"
        app:srcCompat="@android:drawable/ic_menu_camera" />

    <ImageButton
        android:id="@+id/galleryButton"
        android:layout_width="153dp"
        android:layout_height="54dp"
        android:layout_marginEnd="36dp"
        android:backgroundTint="#5C5858"
        android:contentDescription="@string/gallery_button"
        app:layout_constraintBottom_toTopOf="@+id/mapView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/cameraButton"
        app:layout_constraintTop_toBottomOf="@+id/updateImage"
        app:layout_constraintVertical_bias="0.4"
        app:srcCompat="@android:drawable/ic_menu_gallery" />

    <com.google.android.gms.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="340dp"
        android:layout_height="150dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.56"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cameraButton" />

    <ImageButton
        android:id="@+id/addLocation"
        android:layout_width="340dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="#5C5858"
        android:contentDescription="@string/add_location_information"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.569"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mapView"
        app:srcCompat="@android:drawable/ic_dialog_map" />

    <EditText
        android:id="@+id/updateNote"
        android:layout_width="340dp"
        android:layout_height="82dp"
        android:ems="10"
        android:hint="@string/add_note"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.565"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addLocation"
        app:layout_constraintVertical_bias="0.32" />

    <Button
        android:id="@+id/updateBtn"
        android:layout_width="173dp"
        android:layout_height="45dp"
        android:layout_marginTop="7dp"
        android:text="@string/update"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.168"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateNote"
        app:layout_constraintVertical_bias="0.2" />

    <Button
        android:id="@+id/deleteBtn"
        android:layout_width="173dp"
        android:layout_height="45dp"
        android:text="@string/delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/updateBtn"
        app:layout_constraintTop_toBottomOf="@+id/updateNote"
        app:layout_constraintVertical_bias="0.407" />


</androidx.constraintlayout.widget.ConstraintLayout>